
Package org.springframework.ws.transport.http
* fixed issue with reading response HTTP headers

Package org.springframework.ws.wsdl.wsdl11.builder
* fixed #SWS-101: XsdBasedSoap11Wsdl4jDefinitionBuilder parsing error

Package org.springframework.xml.stream
* prefixed all abstract classes with Abstract

Changes in version 1.0-M3
-------------------------
Package org.springframework.oxm.castor
* fixed #SWS-70: AbstractMarshallerTestCase.testMarshalDOMResult() builds a DOM object that does not retain namespace

Package org.springframework.oxm.castor
* CastorMarshaller uses a XMLClassDescriptorResolver instead of a Mapping (#SWS-54)
* CastorMarshaller marshals to DOM trees correctly (#SWS-59)

Package org.springframework.oxm.jibx
* added indent property to pretty print JiBX output (#SWS-72)

Package org.springframework.ws
* moved MessageDispatcher, EndpointAdapter, EndpointExceptionResolver, EndpointInterceptor, EndpointMapping, and
  EndpointInvocationChain to org.springframework.ws.server package

Package org.springframework.ws.client
* Added client-side support based on WebServiceTemplate (#SWS-58)

Package org.springframework.ws.context
* Refactored MessageContextFactory, SoapMessageContextFactory and implementations into WebServiceMessageFactory

Package org.springframework.ws.endpoint
* moved TransformerObjectSupport to org.springframework.xml.transform
* moved all endpoint subclasses to org.springframework.ws.server.endpoint

Package org.springframework.ws.endpoint.interceptor
* moved PayloadValidatingInterceptor to org.springframework.soap.server.endpoint.interceptor, because it contains
  SOAP-specific features

Package org.springframework.ws.soap
* added setId() method to Attachment, to set the Content-ID of MIME attachments (#SWS-53)
* added getResult() to SoapFaultDetail (#SWS-57)

Package org.springframework.ws.soap
* refactored SAAJ from two separate hierarchies (SAAJ 1.2 and SAAJ 1.3) into one, using bridge pattern
